debut de creation du DOM page accueil

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
       
     </header>
     <main>
-      <div id="title"></div>
-      <div id="teddies">
-        
-      </div>
+      <div id="teddies"></div>
     </main>
   </body>
 </html>
