--- a/index.html
+++ b/index.html
@@ -19,10 +19,30 @@
   </head>
   <body>
     <header>
-      
+      <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">Orinoco</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Commande</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Panier</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
-      <div id="teddies"></div>
+
+      <div id="teddies" class="row">
+             
+      </div> 
     </main>
   </body>
 </html>
