--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Orinoco</a>
+          <a class="navbar-brand" href="index.html"><img src="logo.png" width="100" alt="logo orinoco"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Commande</a>
+                <a class="nav-link" href="commande.html">Commande</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Panier</a>
+                <a class="nav-link" href="panier.html">Panier</a>
               </li>
             </ul>
           </div>
