--- a/commande.html
+++ b/commande.html
@@ -13,6 +13,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/2140cc1cc5.js" crossorigin="anonymous"></script>
 
     <title>Confirmation de commande</title>
   </head>
@@ -37,7 +38,9 @@
         </div>
       </nav>
     </header>
-
-    <script src="commande.js"></script>
+    <main>
+      <div id="confirmation"></div>
+    </main>
+    <script src="js/commande.js"></script>
   </body>
 </html>
