--- a/panier.html
+++ b/panier.html
@@ -37,6 +37,9 @@
         </div>
       </nav>
     </header>
+      <main>
+        <div class="container" id="formulaire"></div>
+      </main>
 
     <script src="js/panier.js"></script>
   </body>
