--- a/produit.html
+++ b/produit.html
@@ -27,10 +27,10 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Commande</a>
+                <a class="nav-link" href="commande.html">Commande</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Panier</a>
+                <a class="nav-link" href="panier.html">Panier</a>
               </li>
             </ul>
           </div>
