mis en place de la page produit

--- a/produit.html
+++ b/produit.html
@@ -38,9 +38,7 @@
       </nav>
     </header>
     <main>
-      <div class="teddy"></div>
-
-      
+      <div id="teddy"> </div>
     </main>
 
     <script src="js/produit.js"></script>
