--- a/produit.html
+++ b/produit.html
@@ -26,9 +26,7 @@
               </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="commande.html">Commande</a>
-              </li>
+              
               <li class="nav-item">
                 <a class="nav-link" href="panier.html">Panier</a>
               </li>
@@ -39,6 +37,7 @@
     </header>
     <main>
       <div id="teddy"> </div>
+      <button id="add-basket" class="btn-dark" type="button">Commander</button>
     </main>
 
     <script src="js/produit.js"></script>
