--- a/panier.html
+++ b/panier.html
@@ -43,35 +43,40 @@
             <tr>
               <th>Reference</th>
               <th>Nom</th>
-              <th>Prix</th>
+              <th id="prix-unit">Prix</th>
             </tr>  
           </thead>
-          <tbody id="basket-element">
-            
+          <tbody id="basket-element"> 
           </tbody>
+          <tfoot>
+            <tr>
+              <th><strong>Montant Total</strong></th>
+              <td><input value="" id="total"></td>
+            </tr>
+          </tfoot>
         </table>
+        
         <div class="container" id="formulaire">
           <form method="post">
+            <span id="missNom"></span>
             <label for="nom">Votre Nom de famille</label>
             <input type="text" name="nom" id="nom" required placeholder="DUPOND">
-            <span id="missNom"></span>
 
+            <span id="missPrenom"></span>
             <label for="prenom">Votre prénom</label>
             <input type="text" name="prenom" id="prenom" required placeholder="Julien">
-            <span id="missPrenom"></span>
 
-
+            <span id="missAdresse"></span>
             <label for="adresse">Votre Adresse</label>
             <input type="text" name="adresse" id="adresse" required placeholder="102 rue de l'est">
-            <span id="missAdresse"></span>
 
+            <span id="missVille"></span>
             <label for="ville">Votre Ville et Code Postal</label>
             <input type="text" name="ville" id="ville" required placeholder="CHERBOURG - 97000"> 
-            <span id="missVille"></span>
 
+            <span id="missMail"></span>
             <label for="mail">Votre Adresse Mail</label>
             <input type="email" name="mail" id="mail" required placeholder="monemail@client.fr">
-            <span id="missMail"></span>
 
             <input type="submit" value="Valider la commande" class="btn btn-dark" id="bouton-valider">
           </form>
