objet produit et total panier

--- a/panier.html
+++ b/panier.html
@@ -50,8 +50,9 @@
           </tbody>
           <tfoot>
             <tr>
-              <th><strong>Montant Total</strong></th>
-              <td><input value="" id="total"></td>
+              <th>Total</th>
+              <td></td>
+              <th id="sum"></th>
             </tr>
           </tfoot>
         </table>
