--- a/panier.html
+++ b/panier.html
@@ -58,7 +58,7 @@
         </table>
         
         <div class="container" id="formulaire">
-          <form method="post" onsubmit="contact()">
+          <form method="post" onsubmit="passerCommande()">
             <span id="missNom"></span>
             <label for="nom">Votre Nom de famille</label>
             <input type="text" name="nom" id="nom" required placeholder="DUPOND">
