--- a/commande.html
+++ b/commande.html
@@ -13,7 +13,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <script src="https://kit.fontawesome.com/2140cc1cc5.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2140cc1cc5.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Confirmation de commande</title>
   </head>
@@ -21,15 +24,22 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="logo.png" width="100" alt="logo orinoco"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+          <a class="navbar-brand" href="index.html"
+            ><img src="logo.png" width="100" alt="logo orinoco"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="commande.html">Commande</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="panier.html">Panier</a>
               </li>
@@ -39,6 +49,8 @@
       </nav>
     </header>
     <main>
+      <div id="idCommande"></div>
+
       <div id="confirmation"></div>
     </main>
     <script src="js/commande.js"></script>
