--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -21,10 +21,20 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="logo.png" width="100" alt="logo orinoco"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+          <a class="navbar-brand" href="index.html"
+            ><img src="logo.png" width="100" alt="logo orinoco"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
@@ -34,13 +44,9 @@
           </div>
         </div>
       </nav>
-      
     </header>
     <main>
-
-      <div id="teddies" class="row">
-             
-      </div> 
+      <div id="teddies" class="row"></div>
     </main>
   </body>
 </html>
