--- a/produit.html
+++ b/produit.html
@@ -20,13 +20,22 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><img src="logo.png" width="100" alt="logo orinoco"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+          <a class="navbar-brand" href="index.html"
+            ><img src="logo.png" width="100" alt="logo orinoco"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarResponsive"
+            aria-controls="navbarResponsive"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              
               <li class="nav-item">
                 <a class="nav-link" href="panier.html">Panier</a>
               </li>
@@ -36,7 +45,7 @@
       </nav>
     </header>
     <main>
-      <div id="teddy"> </div>
+      <div id="teddy"></div>
       <button id="add-basket" class="btn-dark" type="button">Commander</button>
     </main>
 
