--- a/panier.html
+++ b/panier.html
@@ -46,7 +46,8 @@
     </header>
     <main>
       <h4>Votre panier contient les articles suivants :</h4>
-
+      <div id="error" class="alert alert-danger" style="display: none;"></div>
+      <div id="orderId" class="alert alert-info" style="display: none;"></div>
       <table class="basket">
         <thead>
           <tr>
