--- a/panier.html
+++ b/panier.html
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="panier.html">Panier</a>
+                <a class="nav-link font-weight-bold" href="panier.html">Panier</a>
               </li>
             </ul>
           </div>
@@ -46,8 +46,6 @@
     </header>
     <main>
       <h4>Votre panier contient les articles suivants :</h4>
-      <div id="error" class="alert alert-danger" style="display: none;"></div>
-      <div id="orderId" class="alert alert-info" style="display: none;"></div>
       <table class="basket">
         <thead>
           <tr>
@@ -130,5 +128,33 @@
     </main>
 
     <script src="js/panier.js"></script>
+    <script
+      src="https://kit.fontawesome.com/2140cc1cc5.js"
+      crossorigin="anonymous"
+    ></script>
+      <!-- Optional JavaScript -->
+
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+        
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+
+        
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+
+        
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
