--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="contenair">
       <div id="teddies" class="row"></div>
     </main>
 
