Nommage des fichiers et fonctions. page confirmation

--- a/confirmation-commande.html
+++ b/confirmation-commande.html
@@ -49,11 +49,12 @@
       </nav>
     </header>
     <main>
-      <div id="idCommande"></div>
-
-      <div id="confirmation"></div>
+      <div id="confirmation">
+        <p class="">Voici le récapitulatif de votre commande: </p>
+      </div>
+      <div id="idCommande"></div>      
     </main>
-    <script src="js/commande.js"></script>
+    <script src="js/confirmation-commande.js"></script>
 
         <!-- Optional JavaScript -->
 
