--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div id="teddies" class="row"></div>
     </main>
 
-    <script src="js/text.js"></script>
+    <script src="js/index.js"></script>
 
         <!-- Optional JavaScript -->
 
