--- a/panier.html
+++ b/panier.html
@@ -66,7 +66,7 @@
 
       <div class="container" id="formulaire">
         <p id="erreur"></p>
-        <form method="post">
+        <form method="post" name="contact">
           <span id="missNom"></span>
           <label for="nom">Votre Nom de famille</label>
           <input
